--- a/css/meetserver.css
+++ b/css/meetserver.css
@@ -3,25 +3,32 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 40px;
     background-color: rgb(0, 0, 0);
+    padding: 0px;
     margin: 0px;
 }
-
+.main {
+    margin-left: auto;
+    margin-right: auto; 
+    width: 1024px;
+    height: 1280px;
+    
+}
 #rimbaud {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    width: 1024px;
+    height: 1280px;
     background-image: url("../img/silhouette.svg");
     background-repeat: no-repeat;
     background-position: top;
+    opacity:0;
 }
 
 .meet {
-    margin-left: auto;
-    margin-right: auto;
-    width: 575px;
-    height: 654px;
+    margin-left: 218px;
+    margin-right: 173px;
+    width: auto;
+    height: 670px;
     /* background-color: rgb(140, 00, 0); */
 }
 
@@ -29,7 +36,7 @@ body {
 .centered {
     position: fixed;
     top: 25%;
-    left: 52%;
+    left: 55%;
     transform: translate(-50%, -50%);
     width: 300px;
     background-color: rgba(255, 255, 255, 0.356);
@@ -69,7 +76,7 @@ body {
 }
 
 .signature {
-    bottom: 0px;
+    bottom: -10px;
     width: 250px;
     position: absolute;
     padding-left: 175px;
